Fixes initial visibility of datepicker.

--- a/daterangepicker.css
+++ b/daterangepicker.css
@@ -16,6 +16,7 @@
   padding: 4px;
   margin-top: 1px;
   border-radius: 4px;
+  display: none;
 }
 
 .daterangepicker.opensleft:before {
